tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/cant-hide-behind-direct-struct-param.stderr
error: constant of non-structural type `NoDerive` in a pattern
  --> $DIR/cant-hide-behind-direct-struct-param.rs:21:9
   |
LL | struct NoDerive(i32);
   | --------------- `NoDerive` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL | const WRAP_DIRECT_PARAM: WrapParam<NoDerive> = WrapParam(NoDerive(0));
   | -------------------------------------------- constant defined here
...
LL |         WRAP_DIRECT_PARAM => { panic!("WRAP_DIRECT_PARAM matched itself"); }
   |         ^^^^^^^^^^^^^^^^^ constant of non-structural type
   |
note: the `PartialEq` trait must be derived, manual `impl`s are not sufficient; see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
  --> $DIR/cant-hide-behind-direct-struct-param.rs:10:1
   |
LL | impl PartialEq for NoDerive { fn eq(&self, _: &Self) -> bool { false } }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

